# selenium-requests

./: .gitignore  README.md  pyproject.toml  setup.py
seleniumrequests/: __init__.py  request.py
tests/: test_seleniumrequests.py
